// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutSharedHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg cryvKT"
    >
      <div
        class="sc-aXZVg sc-gEvEer bAwpoY hPyKbx"
      >
        <div
          class="sc-aXZVg sc-gEvEer hdseiA daEtut"
        >
          <h1
            class="sc-eldPxv flskuf"
          >
            <span
              class="sc-eqUAAy itItFl"
            >
              TESTING_TITLE
            </span>
          </h1>
          <p
            class="sc-ikkxIA kMZRfZ"
          >
            TESTING_CONTENT
          </p>
        </div>
        <div
          class="sc-aXZVg sc-e1efac9-0 hdseiA hrrAQi"
        >
          <div
            class="sc-aXZVg iGlCVz"
          >
            <img
              alt="Oak logo"
              class="sc-iGgWBj dZvqhO"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="http://example.com/image.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AboutSharedHeader renders correctly with loop illustration 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg cryvKT"
    >
      <div
        class="sc-aXZVg sc-gEvEer bAwpoY hPyKbx"
      >
        <div
          class="sc-aXZVg sc-gEvEer hdseiA daEtut"
        >
          <h1
            class="sc-eldPxv flskuf"
          >
            <span
              class="sc-eqUAAy itItFl"
            >
              TESTING_TITLE
            </span>
          </h1>
          <p
            class="sc-ikkxIA kMZRfZ"
          >
            TESTING_CONTENT
          </p>
        </div>
        <div
          class="sc-aXZVg sc-e1efac9-0 hdseiA hrrAQi"
        >
          <div
            class="sc-aXZVg dhXyYU sc-e1efac9-1 xnDFc"
            data-testid="about-shared-loop"
          >
            <img
              alt=""
              class="sc-iGgWBj cMzyFO"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1740665310/OWA/ui-graphics/looping-line-5_vdknco.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
